[package]
edition = "2021"
name = "servo-pio"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
critical-section = "1.1.0"

defmt = "0.3"
defmt-rtt = "0.4"
fugit = "0.3.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nb = "1.0.0"
# Need git versions because of bug in released version preventing loading of pwm.pio
# pio = "0.2.0"
pio = { version="*" }#{ git = "https://github.com/rp-rs/pio-rs", rev = "67c82e867f22e039ac690f1b4ac4a4bbb4212537" }
# pio-proc = "0.2.1"
pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "67c82e867f22e039ac690f1b4ac4a4bbb4212537" }
rp2040-hal = { git = "https://github.com/nashenas88/rp-hal", branch = "dma-offshoot", features = ["defmt"] }
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"
arrayvec = { version = "0.7.2", default-features = false }

[features]
debug_pio = []
defmt = ["rp2040-hal/defmt"]

[dev-dependencies]
pimoroni-servo2040 = { git = "https://github.com/nashenas88/rp-hal", branch = "dma-offshoot"}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
rp2040-hal = { git = "https://github.com/nashenas88/rp-hal", branch = "dma-offshoot", features = ["defmt"]}

# [dev-dependencies.patch.crates-io]
# rp2040-hal = { git = "https://github.com/nashenas88/rp-hal", branch = "dma-offshoot", features = ["defmt"]}

