[package]
edition = "2021"
name = "servo-pio"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
critical-section = "1.1.0"
defmt = "0.3"
fugit = "0.3.6"
pio = "0.2.1"
pio-proc = "0.2.1"
# We need the unpublished DMA APIs.
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "33dd1c6f6abcdccb838a38bbf9fe409b211990d7" }
arrayvec = { version = "0.7.2", default-features = false }

[features]
debug_pio = []
defmt = ["rp2040-hal/defmt"]

[dev-dependencies]
cortex-m-rt = "0.7"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
nb = "1.0.0"
panic-probe = "0.3.0"
pimoroni-servo2040 = "0.2.0"
smart-leds = "0.3.0"
ws2812-pio = "0.5.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
# We need the unpublished DMA APIs.
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "33dd1c6f6abcdccb838a38bbf9fe409b211990d7" }
